tests/baselines/reference/topLevelLambda(strict=true).errors.txt
topLevelLambda.ts(2,17): error TS2331: 'this' cannot be referenced in a module or namespace body.
topLevelLambda.ts(2,17): error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.


==== topLevelLambda.ts (2 errors) ====
    module M {
    	var f = () => {this.window;}
    	               ~~~~
!!! error TS2331: 'this' cannot be referenced in a module or namespace body.
    	               ~~~~
!!! error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
    }
    